--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -128,6 +128,20 @@ header {
     display: none;
 }
 
+.languages{
+    display: flex;
+    justify-content: space-between;
+}
+
+.change-lang{
+    width: 30%;
+}
+
+.change-lang-btn{
+    color: white;
+    background-color: #1f1fa7;
+}
+
 .greeting {
     font-size: 30px;
     color: white;
