--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -381,6 +381,44 @@ img.type-image {
     position: relative;
 }
 
+/*admin films styles*/
+
+.add-film {
+    width: 100%;
+    background: black;
+}
+
+.add-film-form {
+    margin-left: 40%;
+    padding-bottom: 10px;
+}
+
+.add-film-btn {
+    width: 40%;
+    background-color: #1f1fa7;
+    color: white;
+    padding: 10px;
+    font-size: 18px;
+}
+
+.manage-film {
+    width: 80%;
+    display: flex;
+    background-color: black;
+}
+
+.film-edit{
+    width: 40px;
+    height: 40px;
+}
+
+.film-edit-btn {
+    width: 20px;
+    margin-right: 7px;
+}
+
+/*admin films styles*/
+
 /*film card styles*/
 
 h2.film-link {
@@ -676,6 +714,10 @@ footer {
 
 
 @media (max-width: 760px) {
+    .manage-film{
+        width: 98%;
+    }
+
     .card {
         width: 98%;
     }
