--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -520,6 +520,8 @@ textarea.review {
 }
 
 
+
+
 /*end of show film page styles*/
 
 
@@ -641,7 +643,12 @@ table, th, td {
 }
 
 .film-input {
+    margin-bottom: 10px;
     margin-top: 10px;
+}
+
+.genres-select{
+    margin-bottom: 10px;
 }
 
 /*end of film load page*/
