--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -496,6 +496,16 @@ h2.film-link {
     padding: 20px;
 }
 
+.film-rate-form{
+    margin-bottom: 60px;
+}
+
+.review-header{
+    color: white;
+    margin-bottom: 30px;
+    font-size: 32px;
+}
+
 label {
     font-size: 25px;
 }
