--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -384,6 +384,7 @@ img.type-image {
 /*admin films styles*/
 
 .add-film {
+    padding: 15px;
     width: 100%;
     background: black;
 }
@@ -435,6 +436,7 @@ img.type-image {
 }
 
 .genre-search{
+    margin-left: 30px;
     display: inline-block;
 }
 
@@ -814,6 +816,10 @@ footer {
         grid-column-gap: 33px;
     }
 
+    .search-films {
+        width: 75%;
+    }
+
 }
 
 .error-header {
@@ -828,7 +834,7 @@ footer {
     justify-content: space-between;
 }
 
-@media (max-width: 760px) {
+@media (max-width: 768px) {
     .intro {
         min-height: 120vh;
     }
@@ -847,6 +853,18 @@ footer {
 
     .film-wrapper-wide {
         max-width: 100%;
+    }
+
+    .search-films {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .add-film-form {
+        display: flex;
+        justify-content: center;
     }
 }
 
@@ -940,13 +958,38 @@ footer {
         bottom: 32%;
     }
 
-    .add-film-form {
-        margin-left: 30%;
-        min-width: 400px;
+}
+
+@media (max-width: 568px) {
+    .search-films {
+        display: block;
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .genre-search {
+        margin-left: 0;
+        display: block;
+    }
+
+    .name-search {
+        display: block;
+        margin-bottom: 20px;
+    }
+
+    .genres-options {
+        height: 36px;
+        width: 203px;
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 528px) {
+
+    .wrapper-wide {
+        padding: 7px;
+        max-width: 100%;
+        margin: 0 auto;
+    }
 
     .intro {
         min-height: 140vh;
@@ -964,10 +1007,12 @@ footer {
         font-size: 35px;
         line-height: 42px;
     }
-
-    .search-films {
-        width: 100%;
-        margin-bottom: 20px;
+    .users-table {
+        background-color: white;
+        width: 98%;
+        margin-top: 30vh;
+        padding: 5px;
     }
+
 }
 
