--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -465,7 +465,9 @@ h2.film-link {
     text-decoration: none;
     font-size: 26px;
     color: white;
+    margin-right: 20px;
 }
+
 
 .film-link:hover{
     color: #1f1fa7;
